--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="SilverSpring : A force-directed graph layout algorithm in C# with associated SilverLight control" />
-
+    <meta name="description" content="SilverSpring : A force-directed graph layout algorithm in C# with associated Silverlight control" />
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
     <title>SilverSpring</title>
@@ -63,7 +62,7 @@
           <a id="forkme_banner" href="https://github.com/PhillP/SilverSpring">View on GitHub</a>
 
           <h1 id="project_title">SilverSpring</h1>
-          <h2 id="project_tagline">A force-directed graph layout algorithm in C# with associated SilverLight control</h2>
+          <h2 id="project_tagline">A force-directed graph layout algorithm in C# with associated Silverlight control</h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/PhillP/SilverSpring/zipball/master">Download this project as a .zip file</a>
@@ -82,7 +81,7 @@
 <ul>
 <li> a force-directed layout algorithm in C#.  <a href="http://en.wikipedia.org/wiki/Force-based_algorithms_%28graph_drawing%29">See Wikipedia page on force-based algorithms</a>.  The algorithm should produce a layout with minimal line crosses and fairly even spacing.
 </li>
-<li> a SilverLight control (SilverSpringCanvas) that uses the algorithm to layout child elements.  Nodes in the graph can be any SilverLight control that can be added to a canvas.</li>
+<li> a Silverlight control (SilverSpringCanvas) that uses the algorithm to layout child elements.  Nodes in the graph can be any Silverlight control that can be added to a canvas.</li>
 </ul>
 
 <h3>Credits &amp; Mentions</h3>
